Se mejora en accesibilidad el menú de navegación
## Se agregan las etiquetas de "nav", "details" y "summary"

--- a/index.html
+++ b/index.html
@@ -9,28 +9,42 @@
 <body>
 
     <header>
-        <p>Setup</p>
-        <ol>
-            <li><a href="#chrome">Google Chrome</a></li>
-            <li><a href="#vscode">Visual Studio Code</a></li>
-            <li><a href="#figma">Figma</a></li>
-            <li><a href="#github">GitHub</a></li>
-        </ol>
-        <p>Conceptos esenciales del Desarrollo Web</p>
-        <ol>
-            <li><a href="#html">¿Qué es HTML?</a></li>
-            <li><a href="#label">Etiquetas</a></li>
-            <li><a href="#dom">DOM</a></li>
-            <li><a href="#semantics">Semántica</a></li>
-            <li><a href="#attributes">Atributos</a></li>
-            <li><a href="#css">¿Qué es CSS?</a></li>
-        </ol>
-        <p>Modelo de Caja</p>
-        <ol>
-            <li><a href="#box_model">Composición del modelo de caja</a></li>
-            <li><a href="#physical_properties">Propiedades físicas</a></li>
-            <li><a href="#logical_properties">Propiedades lógicas</a></li>
-        </ol>
+
+        <nav>
+
+            <details>
+                <summary>Setup</summary>
+                <ol>
+                    <li><a href="#chrome">Google Chrome</a></li>
+                    <li><a href="#vscode">Visual Studio Code</a></li>
+                    <li><a href="#figma">Figma</a></li>
+                    <li><a href="#github">GitHub</a></li>
+                </ol>
+            </details>
+
+            <details>
+                <summary>Conceptos esenciales del Desarrollo Web</summary>
+                <ol>
+                    <li><a href="#html">¿Qué es HTML?</a></li>
+                    <li><a href="#label">Etiquetas</a></li>
+                    <li><a href="#dom">DOM</a></li>
+                    <li><a href="#semantics">Semántica</a></li>
+                    <li><a href="#attributes">Atributos</a></li>
+                    <li><a href="#css">¿Qué es CSS?</a></li>
+                </ol>
+            </details>
+
+            <details>
+                <summary>Modelo de Caja</summary>
+                <ol>
+                    <li><a href="#box_model">Composición del modelo de caja</a></li>
+                    <li><a href="#physical_properties">Propiedades físicas</a></li>
+                    <li><a href="#logical_properties">Propiedades lógicas</a></li>
+                </ol>
+            </details>
+
+        </nav>
+
     </header>
 
     <h1>Curso esencial de HTML y CSS</h1>
