Se crea la carpeta CSS y el archivo style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Blog Hugo D Lyo</title>
 </head>
 <body>
@@ -74,6 +75,28 @@
     <h2>Conceptos esenciales del Desarrollo Web</h2>
     <h3 id="html">¿Qué es HTML?</h3>
     <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado y la estructura del contenido.</p>
+    <p><code>const name = 'your name'</code></p>
+    <pre>
+        &lt;!DOCTYPE html&gt;
+        &lt;html lang=&quot;es&quot;&gt;
+
+        &lt;head&gt;
+
+            &lt;meta charset=&quot;UTF-8&quot;&gt;
+            &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+            &lt;title&gt;Muestra de C&oacute;digo&lt;/title&gt;
+
+        &lt;/head&gt;
+
+        &lt;body&gt;
+
+            &lt;h1&gt;Esta es una representaci&oacute;n a grandes rasgos de un c&oacute;digo de html&lt;/h1&gt;
+
+        &lt;/body&gt;
+
+        &lt;/html&gt;
+    </pre>
     <h3 id="label">Etiquetas</h3>
     <p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene características y usos diferentes aunque visualmente den un resultado similar.</p>
     <p>Muchas etiquetas son fácil de diferencias como los headings o las imágenes y otras diferentes como header, footer, section o div, aquí es donde la semántica será la respuesta y si sabemos un poco de inglés también podremos darnos una pequeña idea de su uso pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como Software Developer.</p>
