Conclusión de la primer parte del proyecto

--- a/index.html
+++ b/index.html
@@ -4,43 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-physical.css">
+    <link rel="stylesheet" href="css/style_physical.css">
     <title>Blog Hugo D Lyo</title>
 </head>
 <body>
     <div class="hero"></div>
-    <header>
-        <nav>
-            <details>
-                <summary>Setup</summary>
-                <ol>
-                    <li><a href="#chrome">Google Chrome</a></li>
-                    <li><a href="#vscode">Visual Studio Code</a></li>
-                    <li><a href="#figma">Figma</a></li>
-                    <li><a href="#github">GitHub</a></li>
-                </ol>
-            </details>
-            <details>
-                <summary>Conceptos esenciales del Desarrollo Web</summary>
-                <ol>
-                    <li><a href="#html">¿Qué es HTML?</a></li>
-                    <li><a href="#label">Etiquetas</a></li>
-                    <li><a href="#dom">DOM</a></li>
-                    <li><a href="#semantics">Semántica</a></li>
-                    <li><a href="#attributes">Atributos</a></li>
-                    <li><a href="#css">¿Qué es CSS?</a></li>
-                </ol>
-            </details>
-            <details>
-                <summary>Modelo de Caja</summary>
-                <ol>
-                    <li><a href="#box_model">Composición del modelo de caja</a></li>
-                    <li><a href="#physical_properties">Propiedades físicas</a></li>
-                    <li><a href="#logical_properties">Propiedades lógicas</a></li>
-                </ol>
-            </details>
-        </nav>
-    </header>
+    <div class="header">
+        <div class="wrapper">
+            <div class="header-content">
+                <header>
+                    <nav>
+                        <details>
+                            <summary>Setup</summary>
+                            <ol>
+                                <li><a href="#chrome">Google Chrome</a></li>
+                                <li><a href="#vscode">Visual Studio Code</a></li>
+                                <li><a href="#figma">Figma</a></li>
+                                <li><a href="#github">GitHub</a></li>
+                            </ol>
+                        </details>
+                        <details>
+                            <summary>Conceptos esenciales del Desarrollo Web</summary>
+                            <ol>
+                                <li><a href="#html">¿Qué es HTML?</a></li>
+                                <li><a href="#label">Etiquetas</a></li>
+                                <li><a href="#dom">DOM</a></li>
+                                <li><a href="#semantics">Semántica</a></li>
+                                <li><a href="#attributes">Atributos</a></li>
+                                <li><a href="#css">¿Qué es CSS?</a></li>
+                            </ol>
+                        </details>
+                        <details>
+                            <summary>Modelo de Caja</summary>
+                            <ol>
+                                <li><a href="#box_model">Composición del modelo de caja</a></li>
+                                <li><a href="#physical_properties">Propiedades físicas</a></li>
+                                <li><a href="#logical_properties">Propiedades lógicas</a></li>
+                            </ol>
+                        </details>
+                    </nav>
+                </header>
+            </div><!--.header-content-->
+        </div>
+    </div><!--.header-->
     <main class="main">
         <div class="wrapper">
             <div class="main-content">
