Conclusión de la segunda parte del proyecto
##Se dividen los logos entre dark y light para las variantes del proyecto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style_physical.css">
+    <link rel="stylesheet" href="css/style_logical.css">
     <title>Blog Hugo D Lyo</title>
 </head>
 <body>
@@ -57,16 +57,16 @@
                 
                 <section class="section-content">
                     <h2>Setup</h2>
-                    <img src="images/google-chrome.png" alt="logo de google chrome" title="logo de google chrome">
+                    <img src="images/light/google-chrome.png" alt="logo de google chrome" title="logo de google chrome">
                     <h3 id="chrome">Google Chrome</h3>
                     <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.</p>
-                    <img src="images/visual-studio-code.png" alt="logo de vscode" title="logo de vscode">
+                    <img src="images/light/visual-studio-code.png" alt="logo de vscode" title="logo de vscode">
                     <h3 id="vscode">Visual Studio Code</h3>
                     <p>Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.</p>
-                    <img src="images/figma.png" alt="logo de figma" title="logo de figma">
+                    <img src="images/light/figma.png" alt="logo de figma" title="logo de figma">
                     <h3 id="figma">Figma</h3>
                     <p>Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.</p>
-                    <img src="images/github.png" alt="logo de github" title="logo de github">
+                    <img src="images/light/github.png" alt="logo de github" title="logo de github">
                     <h3 id="github">GitHub</h3>
                     <p>Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.</p>
                     <blockquote>
@@ -83,18 +83,18 @@
                     <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado y la estructura del contenido.</p>
                     <p><code>const name = 'your name'</code></p>
                     <pre>
-        &lt;!DOCTYPE html&gt;
-            &lt;html lang=&quot;es&quot;&gt;
-                &lt;head&gt;
-                    &lt;meta charset=&quot;UTF-8&quot;&gt;
-                    &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
-                    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
-                    &lt;title&gt;Muestra de C&oacute;digo&lt;/title&gt;
-                &lt;/head&gt;
-                &lt;body&gt;
-                    &lt;h1&gt;Esta es una representaci&oacute;n a grandes rasgos de un c&oacute;digo de html&lt;/h1&gt;
-                &lt;/body&gt;
-            &lt;/html&gt;
+&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;es&quot;&gt;
+    &lt;head&gt;
+        &lt;meta charset=&quot;UTF-8&quot;&gt;
+        &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+        &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+        &lt;title&gt;Muestra de C&oacute;digo&lt;/title&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+        &lt;h1&gt;Esta es una representaci&oacute;n a grandes rasgos de un c&oacute;digo de html&lt;/h1&gt;
+    &lt;/body&gt;
+&lt;/html&gt;
                     </pre>
                     <h3 id="label">Etiquetas</h3>
                     <p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene características y usos diferentes aunque visualmente den un resultado similar.</p>
