Se crea y se estiliza el Slider

--- a/index.html
+++ b/index.html
@@ -138,6 +138,27 @@
                         <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start | padding-inline-end</li>
                     </ul>
                 </section>
+                <section class="section-content">
+                    <h2>Hola estos son algunos videos muy lindos</h2>
+                    <div class="slider">
+                        <scroll-container class="slaider-container">
+                            <scroll-page class="slaider-slide" id="video-1">
+                                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </scroll-page><!--.slaider-slide-->
+                            <scroll-page class="slaider-slide" id="video-2">
+                                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/cuyYAYFI414" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </scroll-page><!--.slaider-slide-->
+                            <scroll-page class="slaider-slide" id="video-3">
+                                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/129HfPylOig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </scroll-page><!--.slaider-slide-->
+                        </scroll-container><!--.slaider-container-->
+                        <div class="slider-bullet-list">
+                            <a href="#video-1" class="slider-bullet"></a>
+                            <a href="#video-2" class="slider-bullet"></a>
+                            <a href="#video-3" class="slider-bullet"></a>
+                        </div><!--.slider-bullet-list-->
+                    </div><!--.slider-->
+                </section>
                 <p>Si tienes alguna duda preguntar a <a href="mailto:fl.hugodlyo@gmail.com">Hugo D Lyo</a> o en <a href="#">leonidasesteban.com</a> para que estudies alguna carrera</p>
             </div><!--.main-content-->
         </div><!--.wrapper-->
