Se crea y se estiliza el Formulario

--- a/index.html
+++ b/index.html
@@ -160,11 +160,20 @@
                     </div><!--.slider-->
                 </section>
                 <p>Si tienes alguna duda preguntar a <a href="mailto:fl.hugodlyo@gmail.com">Hugo D Lyo</a> o en <a href="#">leonidasesteban.com</a> para que estudies alguna carrera</p>
+                <section class="section-content">
+                    <h2>Ingresa a nuestor newsletter</h2>
+                    <form action="#" class="form">
+                        <input type="text" required placeholder="Nombre">
+                        <input type="email" required placeholder="Correo Electrónico">
+                        <input type="submit" value="Suscribirme">
+                    </form>
+                </section>
             </div><!--.main-content-->
         </div><!--.wrapper-->
     </main>
 
     <a href="https://leonidasesteban.github.io/curso-esencial-html-css/#github" target="_black">Blog Leo</a>
-    <a href="https://github.com/LeonidasEsteban/curso-esencial-html-css" target="_black">github blog leo</a>
+    <a href="https://github.com/LeonidasEsteban/curso-esencial-html-css" target="_black">Github Blog Leo</a>
+    <a href="https://github.com/herwingx/nemium/blob/main/css/style-logical.css">Scroll Github</a>
 </body>
 </html>
