Agregamos las etiquetas para Open Graph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Mi proyecto del Curso esencial de HTML y CSS">
+    <meta property="og:type" content="website>
+    <meta property="og:description" content="Todo lo que necesitas saber en tu día a día como Frontend">
+    <meta property="og:url" content="https://hugodlyo.github.io/proyecto_blog/">
+    <meta property="og:image" content="https://hugodlyo.github.io/proyecto_blog/images/dom.png">
     <link rel="stylesheet" href="css/style_logical.css">
     <title>Blog Hugo D Lyo</title>
 </head>
