--- a/nemiumb.html
+++ b/nemiumb.html
@@ -28,8 +28,8 @@
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/index.css">
-    <title>Nemium A</title>
+    <link rel="stylesheet" href="css/nemiumb.css">
+    <title>Nemiun B</title>
 </head>
 <body>
     <div class="hero"></div>
@@ -41,8 +41,8 @@
                         <details>
                             <summary>Variantes del Proyecto</summary>
                             <ol>
-                                <li class="active"><a href="index.html">Nemiun A</a></li>
-                                <li><a href="nemiumb.html">Nemiun B</a></li>
+                                <li><a href="index.html">Nemiun A</a></li>
+                                <li class="active"><a href="nemiumb.html">Nemiun B</a></li>
                                 <li><a href="nemiumc.html">Nemiun C</a></li>
                                 <li><a href="nemiumd.html">Nemiun D</a></li>
                                 <li><a href="nemiume.html">Nemiun E</a></li>
@@ -92,16 +92,16 @@
                 
                 <section class="section-content">
                     <h2>Setup</h2>
-                    <img src="images/dark/google-chrome.png" alt="logo de google chrome" title="logo de google chrome">
+                    <img src="images/light/google-chrome.png" alt="logo de google chrome" title="logo de google chrome">
                     <h3 id="chrome">Google Chrome</h3>
                     <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.</p>
-                    <img src="images/dark/visual-studio-code.png" alt="logo de vscode" title="logo de vscode">
+                    <img src="images/light/visual-studio-code.png" alt="logo de vscode" title="logo de vscode">
                     <h3 id="vscode">Visual Studio Code</h3>
                     <p>Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.</p>
-                    <img src="images/dark/figma.png" alt="logo de figma" title="logo de figma">
+                    <img src="images/light/figma.png" alt="logo de figma" title="logo de figma">
                     <h3 id="figma">Figma</h3>
                     <p>Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.</p>
-                    <img src="images/dark/github.png" alt="logo de github" title="logo de github">
+                    <img src="images/light/github.png" alt="logo de github" title="logo de github">
                     <h3 id="github">GitHub</h3>
                     <p>Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.</p>
                     <blockquote>
@@ -194,17 +194,13 @@
                         </div><!--.slider-bullet-list-->
                     </div><!--.slider-->
                 </section>
-                <p>Si tienes alguna duda preguntar a <a href="mailto:fl.hugodlyo@gmail.com">Hugo D Lyo</a> o en <a href="#">leonidasesteban.com</a> para que estudies alguna carrera</p>
+                <p class="info">Si tienes alguna duda preguntar a <a href="mailto:fl.hugodlyo@gmail.com">Hugo D Lyo</a> o en <a href="#">leonidasesteban.com</a> para que estudies alguna carrera</p>
                 <section class="section-content">
                     <h2>Ingresa a nuestor newsletter</h2>
                     <form action="#" class="form">
-                        <div class="label">
-                            <input type="text" required placeholder="Nombre">
-                            <input type="email" required placeholder="Correo Electrónico">
-                            <div class="enviar">
-                                <input type="submit" value="Suscribirme">
-                            </div>
-                        </div>
+                        <input type="text" required placeholder="Nombre">
+                        <input type="email" required placeholder="Correo Electrónico">
+                        <input type="submit" value="Suscribirme">
                     </form>
                 </section>
             </div><!--.main-content-->
@@ -217,9 +213,9 @@
                 <footer>
                     <p><a href="#">© Leonidas Esteban 2021</a></p>
                     <div class="social">
-                        <img src="images/light/instagram.png" alt="logo de instagram" title="logo de instagram">
-                        <img src="images/light/facebook.png" alt="logo de facebook" title="logo de facebook">
-                        <img src="images/light/twitter.png" alt="logo de twitter" title="logo de twitter">
+                        <img src="images/dark/instagram.png" alt="logo de instagram" title="logo de instagram">
+                        <img src="images/dark/facebook.png" alt="logo de facebook" title="logo de facebook">
+                        <img src="images/dark/twitter.png" alt="logo de twitter" title="logo de twitter">
                     </div>
                 </footer>
             </div>
