--- a/nemiumc.html
+++ b/nemiumc.html
@@ -28,38 +28,40 @@
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/index.css">
-    <title>Nemium A</title>
+    <link rel="stylesheet" href="css/nemiumc.css">
+    <title>Nemiun C</title>
 </head>
 <body>
-    <div class="hero"></div>
+    <!-- <div class="hero"></div> -->
+    <div class="banner">
+        <div class="wrapper">
+            <h1>Curso esencial de HTML y CSS</h1>
+            <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
+        </div>
+    </div>
     <div class="header">
         <div class="wrapper">
             <div class="header-content">
                 <header>
                     <nav>
-                        <details>
-                            <summary>Variantes del Proyecto</summary>
-                            <ol>
-                                <li class="active"><a href="index.html">Nemiun A</a></li>
-                                <li><a href="nemiumb.html">Nemiun B</a></li>
-                                <li><a href="nemiumc.html">Nemiun C</a></li>
-                                <li><a href="nemiumd.html">Nemiun D</a></li>
-                                <li><a href="nemiume.html">Nemiun E</a></li>
-                                <li><a href="#">Nemiun HDL</a></li>
-                            </ol>
-                        </details>
-                        <details>
-                            <summary>Setup</summary>
+                        <p>Variantes del Proyecto</p>
+                        <ol>
+                            <li><a href="index.html">Nemiun A</a></li>
+                            <li><a href="nemiumb.html">Nemiun B</a></li>
+                            <li class="active"><a href="nemiumc.html">Nemiun C</a></li>
+                            <li><a href="nemiumd.html">Nemiun D</a></li>
+                            <li><a href="nemiume.html">Nemiun E</a></li>
+                            <li><a href="#">Nemiun HDL</a></li>
+                        </ol>
+                        <div class="nav-content">
+                            <p>Setup</p>
                             <ol>
                                 <li><a href="#chrome">Google Chrome</a></li>
                                 <li><a href="#vscode">Visual Studio Code</a></li>
                                 <li><a href="#figma">Figma</a></li>
                                 <li><a href="#github">GitHub</a></li>
                             </ol>
-                        </details>
-                        <details>
-                            <summary>Conceptos esenciales del Desarrollo Web</summary>
+                            <p>Conceptos esenciales del Desarrollo Web</p>
                             <ol>
                                 <li><a href="#html">¿Qué es HTML?</a></li>
                                 <li><a href="#label">Etiquetas</a></li>
@@ -68,15 +70,13 @@
                                 <li><a href="#attributes">Atributos</a></li>
                                 <li><a href="#css">¿Qué es CSS?</a></li>
                             </ol>
-                        </details>
-                        <details>
-                            <summary>Modelo de Caja</summary>
+                            <p>Modelo de Caja</p>
                             <ol>
                                 <li><a href="#box_model">Composición del modelo de caja</a></li>
                                 <li><a href="#physical_properties">Propiedades físicas</a></li>
                                 <li><a href="#logical_properties">Propiedades lógicas</a></li>
                             </ol>
-                        </details>
+                        </div>
                     </nav>
                 </header>
             </div><!--.header-content-->
@@ -85,8 +85,8 @@
     <main class="main">
         <div class="wrapper">
             <div class="main-content">
-                <h1>Curso esencial de HTML y CSS</h1>
-                <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
+                <!-- <h1>Curso esencial de HTML y CSS</h1>
+                <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p> -->
                 
                 <hr>
                 
@@ -94,7 +94,7 @@
                     <h2>Setup</h2>
                     <img src="images/dark/google-chrome.png" alt="logo de google chrome" title="logo de google chrome">
                     <h3 id="chrome">Google Chrome</h3>
-                    <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.</p>
+                    <p>Chrome va a ser <strong>el navegador que utilizaremos en el curso</strong> por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.</p>
                     <img src="images/dark/visual-studio-code.png" alt="logo de vscode" title="logo de vscode">
                     <h3 id="vscode">Visual Studio Code</h3>
                     <p>Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.</p>
@@ -194,7 +194,7 @@
                         </div><!--.slider-bullet-list-->
                     </div><!--.slider-->
                 </section>
-                <p>Si tienes alguna duda preguntar a <a href="mailto:fl.hugodlyo@gmail.com">Hugo D Lyo</a> o en <a href="#">leonidasesteban.com</a> para que estudies alguna carrera</p>
+                <p class="info">Si tienes alguna duda preguntar a <a href="mailto:fl.hugodlyo@gmail.com">Hugo D Lyo</a> o en <a href="#">leonidasesteban.com</a> para que estudies alguna carrera</p>
                 <section class="section-content">
                     <h2>Ingresa a nuestor newsletter</h2>
                     <form action="#" class="form">
