--- a/nemiumc.html
+++ b/nemiumc.html
@@ -51,7 +51,7 @@
                             <li class="active"><a href="nemiumc.html">Nemiun C</a></li>
                             <li><a href="nemiumd.html">Nemiun D</a></li>
                             <li><a href="nemiume.html">Nemiun E</a></li>
-                            <li><a href="#">Nemiun HDL</a></li>
+                            <li><a href="nemium_hdl.html">Nemiun HDL</a></li>
                         </ol>
                         <div class="nav-content">
                             <p>Setup</p>
@@ -226,8 +226,6 @@
         </div>
     </div>
     
-    <!-- <a target="_black" href="https://leonidasesteban.github.io/curso-esencial-html-css/#github">Blog Leo</a>
-    <a target="_black" href="https://github.com/LeonidasEsteban/curso-esencial-html-css">Github Blog Leo</a>
-    <a target="_black" href="https://github.com/herwingx/nemium/blob/main/css/style-logical.css">Scroll Github</a> -->
+    <script src="js/menu.js"></script>
 </body>
 </html>
